--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vim/.vim/bundle/Vundle.vim"]
 	path = vim/.vim/bundle/Vundle.vim
 	url = https://github.com/VundleVim/Vundle.vim.git
+[submodule "scripts/diff-so-fancy-repo"]
+	path = scripts/diff-so-fancy-repo
+	url = git@github.com:so-fancy/diff-so-fancy.git
