--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -24,6 +24,7 @@
   cosm = "!f(){ git checkout \"$@\" && git submodule update --init --recursive; }; f"
 [core]
   excludesfile = ~/.gitignore_global
+  pager = "diff-so-fancy | less --tabs=4 -RFX"
 [diff "nodiff"]
   command = /bin/true
 [push]
