--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,7 +1,22 @@
 [include]
   path = ~/.gituser
 [color]
-  ui = auto
+  ui = true
+
+[color "diff-highlight"]
+  oldNormal = red bold
+  newNormal = green bold
+  oldHightlight = red bold 52
+  newHighlight = green bold 22
+
+[color "diff"]
+  meta = 227
+  frag = magenta bold
+  commit = 227 bold
+  old = red bold
+  new = green bold
+  whitespace = red reverse
+
 [diff]
   tool = meld
   algorithm = patience
@@ -40,3 +55,4 @@
 
 [status]
   short = true
+
