--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -42,7 +42,7 @@
 
 [core]
   excludesfile = ~/.gitignore_global
-  pager = "diff-so-fancy | less --tabs=4 -RFX"
+  pager = "diff-so-fancy | less --tabs=4 -R -g -i -M -S -w"
 
 [diff "nodiff"]
   command = /bin/true
